--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title> ¯\_(ツ)_/¯ </title>
+		<title>Week-1</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<link rel="stylesheet" href="dist/css/reset.css">
 		<link rel="stylesheet" href="dist/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-			<h1>Nataly Garzon</h1>
-			<h2>Quarter 3</h2>
-		</header>
-		<div>
-			<h3>Zombie Squad</h3>
-			<ul>
-				<li>Survivor 1</li>
-				<li>Survivor 2</li>
-				<li>Survivor 3</li>
-			</ul>
+		<div class="wrapper">
+			<header>
+				<h1>Nataly Garzon</h1>
+				<h2>Quarter 3</h2>
+			</header>
+			<div>
+				<h3>Zombie Squad</h3>
+				<ul>
+					<li>Survivor 1</li>
+					<li>Survivor 2</li>
+					<li>Survivor 3</li>
+				</ul>
+			</div>
 		</div>
-
 		<script src="dist/js/main.js"></script>
 
 	</body>
