added favorite color

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<li>Survivor 2</li>
 				<li>Survivor 3</li>
 			</ul>
+			<p>Favorite Color: Zombies</p>
 		</div>
 
 		<script src="dist/js/main.js"></script>
