Zombie Squad Styling

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<div>
 				<h3>Zombie Squad</h3>
 				<ul>
-					<li>Survivor 1</li>
-					<li>Survivor 2</li>
-					<li>Survivor 3</li>
+					<li>- 1st Survivor I find</li>
+					<li>- 2nd Survivor I find</li>
+					<li>- 3rd Survivor I find</li>
 				</ul>
 			</div>
 		</div>
